--- a/app/build.gradle
+++ b/app/build.gradle
@@ -36,9 +36,13 @@ dependencies {
     implementation lifecycleDependencies.values()
     implementation uiDependencies.values()
     implementation coroutineDependencies.values()
-    implementation imageDependencies.glide
-
-    kapt imageDependencies.glideCompiler
+    implementation imageDependencies.values()
 
     testImplementation testDependencies.values()
+}
+
+tasks.withType(org.jetbrains.kotlin.gradle.tasks.KotlinCompile).all {
+    kotlinOptions {
+        jvmTarget = "1.8"
+    }
 }
