--- a/scripts/dependency.gradle
+++ b/scripts/dependency.gradle
@@ -22,15 +22,14 @@ ext {
             android: "org.jetbrains.kotlinx:kotlinx-coroutines-android:$coroutines",
     ]
 
-    glide = '4.9.0'
+    coil = '0.7.0'
     imageDependencies = [
-            glide        : "com.github.bumptech.glide:glide:$glide",
-            glideCompiler: "com.github.bumptech.glide:compiler:$glide",
+            coil: "io.coil-kt:coil:$coil",
     ]
 
     lifecycle = '2.1.0'
     lifecycleDependencies = [
-            glide   : "androidx.lifecycle:lifecycle-extensions:$lifecycle",
+            lifecycle   : "androidx.lifecycle:lifecycle-extensions:$lifecycle",
             compiler: "androidx.lifecycle:lifecycle-common-java8:$lifecycle",
     ]
 
@@ -52,7 +51,7 @@ ext {
             material  : "com.google.android.material:material:$material",
     ]
 
-    room = '2.1.0'
+    room = '2.2.0'
     roomDependencies = [
             runtime : "androidx.room:room-runtime:$room",
             compiler: "androidx.room:room-compiler:$room",
